# ml-exp

./: .gitignore  PROCESS_OVERVIEW.md  main.py  pyproject.toml  questions.md
notebooks/: 00_starter.ipynb  01_eda.ipynb  02_eda_mining.ipynb  03_modeling.ipynb  03_modeling_executed.ipynb  04_time_lags.ipynb  04_time_lags_executed.ipynb  05_selective_lags.ipynb  05_selective_lags_executed.ipynb
