[project]
name = "ml-exp"
version = "0.1.0"
description = "ML experimentation environment with causal inference"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dowhy>=0.11.1",
    "flaml>=2.4.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
